parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    IMPORT
    SWITCH

Grammar

Rule 0     S' -> Niark
Rule 1     Niark -> definicion_funcion LLAVEIZQ NEWLINE instrucciones LLAVEDER NEWLINE Niark
Rule 2     Niark -> instrucciones Niark
Rule 3     Niark -> vacio
Rule 4     indentacion -> TABULACION indentacion
Rule 5     indentacion -> vacio
Rule 6     definicion_funcion -> dominio tipo_return NOMBRE PARIZQ parametro PARDER
Rule 7     dominio -> PRIVATE
Rule 8     dominio -> PUBLIC
Rule 9     tipo_return -> VOID
Rule 10    tipo_return -> FUNCTION
Rule 11    parametro -> vacio
Rule 12    parametro -> NOMBRE parametro_extra
Rule 13    parametro_extra -> COMA NOMBRE parametro_extra
Rule 14    parametro_extra -> vacio
Rule 15    llamado_funcion -> NOMBRE PARIZQ parametro_llamado PARDER
Rule 16    llamado_funcion -> NOMBRE PARIZQ vacio PARDER
Rule 17    parametro_llamado -> tipo_variable parametro_llamado_extra
Rule 18    parametro_llamado -> op_aritmetica parametro_llamado_extra
Rule 19    parametro_llamado_extra -> COMA parametro_llamado
Rule 20    parametro_llamado_extra -> vacio
Rule 21    instruccion -> condicion_if comentario NEWLINE
Rule 22    instruccion -> condicion_else comentario NEWLINE
Rule 23    instruccion -> ciclo_for comentario NEWLINE
Rule 24    instruccion -> ciclo_while comentario NEWLINE
Rule 25    instruccion -> imprimir comentario NEWLINE
Rule 26    instruccion -> leer comentario NEWLINE
Rule 27    instruccion -> incdec comentario NEWLINE
Rule 28    instruccion -> dec_variable comentario NEWLINE
Rule 29    instruccion -> dec_vector comentario NEWLINE
Rule 30    instruccion -> asigna comentario NEWLINE
Rule 31    instruccion -> asignacion_vector comentario NEWLINE
Rule 32    instruccion -> llamado_funcion comentario NEWLINE
Rule 33    instruccion -> retorno comentario NEWLINE
Rule 34    instruccion -> comentario NEWLINE
Rule 35    comentario -> COMENTARIO
Rule 36    comentario -> vacio
Rule 37    instrucciones -> indentacion instruccion concat_instruccion
Rule 38    instrucciones -> vacio
Rule 39    concat_instruccion -> indentacion instruccion concat_instruccion
Rule 40    concat_instruccion -> vacio
Rule 41    condicion_if -> IF PARIZQ condicion PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
Rule 42    condicion_else -> ELSE LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
Rule 43    condicion_else -> ELSE condicion_if
Rule 44    ciclo_for -> FOR PARIZQ dec_variable PUNTOYCOMA condicion PUNTOYCOMA incdec PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
Rule 45    incdec -> pre_incdec
Rule 46    incdec -> post_incdec
Rule 47    pre_incdec -> INCREMENTAR NOMBRE
Rule 48    pre_incdec -> DECREMENTAR NOMBRE
Rule 49    post_incdec -> NOMBRE INCREMENTAR
Rule 50    post_incdec -> NOMBRE DECREMENTAR
Rule 51    ciclo_while -> WHILE PARIZQ condicion PARDER LLAVEIZQ
Rule 52    imprimir -> PRINT PARIZQ tipo_variable PARDER
Rule 53    leer -> READ PARIZQ NOMBRE PARDER
Rule 54    dec_variable -> DECVARIABLE ASIGNACION op_aritmetica
Rule 55    dec_variable -> DECVARIABLE ASIGNACION tipo_variable
Rule 56    dec_vector -> DECVARIABLE CORCHETEIZQ NOMBRE CORCHETEDER
Rule 57    dec_vector -> DECVARIABLE CORCHETEIZQ INT CORCHETEDER
Rule 58    dec_vector -> DECVARIABLE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION op_aritmetica
Rule 59    dec_vector -> DECVARIABLE CORCHETEIZQ INT CORCHETEDER ASIGNACION op_aritmetica
Rule 60    dec_vector -> DECVARIABLE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION tipo_variable
Rule 61    dec_vector -> DECVARIABLE CORCHETEIZQ INT CORCHETEDER ASIGNACION tipo_variable
Rule 62    asigna -> NOMBRE ASIGNACION op_aritmetica
Rule 63    asigna -> NOMBRE ASIGNACION tipo_variable
Rule 64    asignacion_vector -> NOMBRE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION op_aritmetica
Rule 65    asignacion_vector -> NOMBRE CORCHETEIZQ INT CORCHETEDER ASIGNACION op_aritmetica
Rule 66    asignacion_vector -> NOMBRE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION tipo_variable
Rule 67    asignacion_vector -> NOMBRE CORCHETEIZQ INT CORCHETEDER ASIGNACION tipo_variable
Rule 68    retorno -> RETURN tipo_variable
Rule 69    retorno -> RETURN op_aritmetica
Rule 70    operador_condicional -> DIFERENTE
Rule 71    operador_condicional -> IGUAL
Rule 72    operador_condicional -> MAYOR
Rule 73    operador_condicional -> MAYORIGUAL
Rule 74    operador_condicional -> MENOR
Rule 75    operador_condicional -> MENORIGUAL
Rule 76    condicion -> tipo_variable operador_condicional tipo_variable condicion_extra
Rule 77    condicion -> PARIZQ tipo_variable operador_condicional tipo_variable condicion_extra PARDER condicion_extra
Rule 78    condicion_extra -> operador_logico condicion
Rule 79    condicion_extra -> vacio
Rule 80    tipo_variable -> NOMBRE
Rule 81    tipo_variable -> DOUBLE
Rule 82    tipo_variable -> INT
Rule 83    tipo_variable -> STRING
Rule 84    tipo_variable -> FALSE
Rule 85    tipo_variable -> TRUE
Rule 86    tipo_variable -> llamado_funcion
Rule 87    op_aritmetica -> op_aritmetica_extra operador_aritmetico tipo_variable
Rule 88    op_aritmetica -> op_aritmetica_extra operador_aritmetico PARIZQ op_aritmetica_extra operador_aritmetico tipo_variable PARDER
Rule 89    op_aritmetica -> PARIZQ op_aritmetica_extra operador_aritmetico tipo_variable PARDER
Rule 90    op_aritmetica_extra -> tipo_variable
Rule 91    op_aritmetica_extra -> op_aritmetica
Rule 92    op_aritmetica_extra -> vacio
Rule 93    operador_aritmetico -> SUMA
Rule 94    operador_aritmetico -> RESTA
Rule 95    operador_aritmetico -> MULT
Rule 96    operador_aritmetico -> DIV
Rule 97    operador_logico -> AND
Rule 98    operador_logico -> OR
Rule 99    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 97
ASIGNACION           : 54 55 58 59 60 61 62 63 64 65 66 67
BREAK                : 
CASE                 : 
COMA                 : 13 19
COMENTARIO           : 35
CORCHETEDER          : 56 57 58 59 60 61 64 65 66 67
CORCHETEIZQ          : 56 57 58 59 60 61 64 65 66 67
DECREMENTAR          : 48 50
DECVARIABLE          : 54 55 56 57 58 59 60 61
DIFERENTE            : 70
DIV                  : 96
DOUBLE               : 81
ELSE                 : 42 43
FALSE                : 84
FOR                  : 44
FUNCTION             : 10
IF                   : 41
IGUAL                : 71
IMPORT               : 
INCREMENTAR          : 47 49
INT                  : 57 59 61 65 67 82
LLAVEDER             : 1 41 42 44
LLAVEIZQ             : 1 41 42 44 51
MAYOR                : 72
MAYORIGUAL           : 73
MENOR                : 74
MENORIGUAL           : 75
MULT                 : 95
NEWLINE              : 1 1 21 22 23 24 25 26 27 28 29 30 31 32 33 34 41 42 44
NOMBRE               : 6 12 13 15 16 47 48 49 50 53 56 58 60 62 63 64 64 65 66 66 67 80
OR                   : 98
PARDER               : 6 15 16 41 44 51 52 53 77 88 89
PARIZQ               : 6 15 16 41 44 51 52 53 77 88 89
PRINT                : 52
PRIVATE              : 7
PUBLIC               : 8
PUNTOYCOMA           : 44 44
READ                 : 53
RESTA                : 94
RETURN               : 68 69
STRING               : 83
SUMA                 : 93
SWITCH               : 
TABULACION           : 4
TRUE                 : 85
VOID                 : 9
WHILE                : 51
error                : 

Nonterminals, with rules where they appear

Niark                : 1 2 0
asigna               : 30
asignacion_vector    : 31
ciclo_for            : 23
ciclo_while          : 24
comentario           : 21 22 23 24 25 26 27 28 29 30 31 32 33 34
concat_instruccion   : 37 39
condicion            : 41 44 51 78
condicion_else       : 22
condicion_extra      : 76 77 77
condicion_if         : 21 43
dec_variable         : 28 44
dec_vector           : 29
definicion_funcion   : 1
dominio              : 6
imprimir             : 25
incdec               : 27 44
indentacion          : 4 37 39 41 42 44
instruccion          : 37 39
instrucciones        : 1 2 41 42 44
leer                 : 26
llamado_funcion      : 32 86
op_aritmetica        : 18 54 58 59 62 64 65 69 91
op_aritmetica_extra  : 87 88 88 89
operador_aritmetico  : 87 88 88 89
operador_condicional : 76 77
operador_logico      : 78
parametro            : 6
parametro_extra      : 12 13
parametro_llamado    : 15 19
parametro_llamado_extra : 17 18
post_incdec          : 46
pre_incdec           : 45
retorno              : 33
tipo_return          : 6
tipo_variable        : 17 52 55 60 61 63 66 67 68 76 76 77 77 87 88 89 90
vacio                : 3 5 11 14 16 20 36 38 40 79 92

Parsing method: LALR

state 0

    (0) S' -> . Niark
    (1) Niark -> . definicion_funcion LLAVEIZQ NEWLINE instrucciones LLAVEDER NEWLINE Niark
    (2) Niark -> . instrucciones Niark
    (3) Niark -> . vacio
    (6) definicion_funcion -> . dominio tipo_return NOMBRE PARIZQ parametro PARDER
    (37) instrucciones -> . indentacion instruccion concat_instruccion
    (38) instrucciones -> . vacio
    (99) vacio -> .
    (7) dominio -> . PRIVATE
    (8) dominio -> . PUBLIC
    (4) indentacion -> . TABULACION indentacion
    (5) indentacion -> . vacio

  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for TABULACION resolved as shift
    $end            reduce using rule 99 (vacio -> .)
    IF              reduce using rule 99 (vacio -> .)
    ELSE            reduce using rule 99 (vacio -> .)
    FOR             reduce using rule 99 (vacio -> .)
    WHILE           reduce using rule 99 (vacio -> .)
    PRINT           reduce using rule 99 (vacio -> .)
    READ            reduce using rule 99 (vacio -> .)
    DECVARIABLE     reduce using rule 99 (vacio -> .)
    NOMBRE          reduce using rule 99 (vacio -> .)
    RETURN          reduce using rule 99 (vacio -> .)
    COMENTARIO      reduce using rule 99 (vacio -> .)
    INCREMENTAR     reduce using rule 99 (vacio -> .)
    DECREMENTAR     reduce using rule 99 (vacio -> .)
    NEWLINE         reduce using rule 99 (vacio -> .)
    PRIVATE         shift and go to state 7
    PUBLIC          shift and go to state 8
    TABULACION      shift and go to state 9

  ! PRIVATE         [ reduce using rule 99 (vacio -> .) ]
  ! PUBLIC          [ reduce using rule 99 (vacio -> .) ]
  ! TABULACION      [ reduce using rule 99 (vacio -> .) ]

    Niark                          shift and go to state 1
    definicion_funcion             shift and go to state 2
    instrucciones                  shift and go to state 3
    vacio                          shift and go to state 4
    dominio                        shift and go to state 5
    indentacion                    shift and go to state 6

state 1

    (0) S' -> Niark .



state 2

    (1) Niark -> definicion_funcion . LLAVEIZQ NEWLINE instrucciones LLAVEDER NEWLINE Niark

    LLAVEIZQ        shift and go to state 10


state 3

    (2) Niark -> instrucciones . Niark
    (1) Niark -> . definicion_funcion LLAVEIZQ NEWLINE instrucciones LLAVEDER NEWLINE Niark
    (2) Niark -> . instrucciones Niark
    (3) Niark -> . vacio
    (6) definicion_funcion -> . dominio tipo_return NOMBRE PARIZQ parametro PARDER
    (37) instrucciones -> . indentacion instruccion concat_instruccion
    (38) instrucciones -> . vacio
    (99) vacio -> .
    (7) dominio -> . PRIVATE
    (8) dominio -> . PUBLIC
    (4) indentacion -> . TABULACION indentacion
    (5) indentacion -> . vacio

  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for TABULACION resolved as shift
    $end            reduce using rule 99 (vacio -> .)
    IF              reduce using rule 99 (vacio -> .)
    ELSE            reduce using rule 99 (vacio -> .)
    FOR             reduce using rule 99 (vacio -> .)
    WHILE           reduce using rule 99 (vacio -> .)
    PRINT           reduce using rule 99 (vacio -> .)
    READ            reduce using rule 99 (vacio -> .)
    DECVARIABLE     reduce using rule 99 (vacio -> .)
    NOMBRE          reduce using rule 99 (vacio -> .)
    RETURN          reduce using rule 99 (vacio -> .)
    COMENTARIO      reduce using rule 99 (vacio -> .)
    INCREMENTAR     reduce using rule 99 (vacio -> .)
    DECREMENTAR     reduce using rule 99 (vacio -> .)
    NEWLINE         reduce using rule 99 (vacio -> .)
    PRIVATE         shift and go to state 7
    PUBLIC          shift and go to state 8
    TABULACION      shift and go to state 9

  ! PRIVATE         [ reduce using rule 99 (vacio -> .) ]
  ! PUBLIC          [ reduce using rule 99 (vacio -> .) ]
  ! TABULACION      [ reduce using rule 99 (vacio -> .) ]

    instrucciones                  shift and go to state 3
    Niark                          shift and go to state 11
    definicion_funcion             shift and go to state 2
    vacio                          shift and go to state 4
    dominio                        shift and go to state 5
    indentacion                    shift and go to state 6

state 4

    (3) Niark -> vacio .
    (38) instrucciones -> vacio .
    (5) indentacion -> vacio .

  ! reduce/reduce conflict for $end resolved using rule 3 (Niark -> vacio .)
  ! reduce/reduce conflict for IF resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for ELSE resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for FOR resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for WHILE resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for PRINT resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for READ resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for DECVARIABLE resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for NOMBRE resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for RETURN resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for COMENTARIO resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for INCREMENTAR resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for DECREMENTAR resolved using rule 5 (indentacion -> vacio .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 5 (indentacion -> vacio .)
    $end            reduce using rule 3 (Niark -> vacio .)
    PRIVATE         reduce using rule 38 (instrucciones -> vacio .)
    PUBLIC          reduce using rule 38 (instrucciones -> vacio .)
    TABULACION      reduce using rule 38 (instrucciones -> vacio .)
    IF              reduce using rule 5 (indentacion -> vacio .)
    ELSE            reduce using rule 5 (indentacion -> vacio .)
    FOR             reduce using rule 5 (indentacion -> vacio .)
    WHILE           reduce using rule 5 (indentacion -> vacio .)
    PRINT           reduce using rule 5 (indentacion -> vacio .)
    READ            reduce using rule 5 (indentacion -> vacio .)
    DECVARIABLE     reduce using rule 5 (indentacion -> vacio .)
    NOMBRE          reduce using rule 5 (indentacion -> vacio .)
    RETURN          reduce using rule 5 (indentacion -> vacio .)
    COMENTARIO      reduce using rule 5 (indentacion -> vacio .)
    INCREMENTAR     reduce using rule 5 (indentacion -> vacio .)
    DECREMENTAR     reduce using rule 5 (indentacion -> vacio .)
    NEWLINE         reduce using rule 5 (indentacion -> vacio .)

  ! IF              [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! ELSE            [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! FOR             [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! WHILE           [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! PRINT           [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! READ            [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! DECVARIABLE     [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! NOMBRE          [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! RETURN          [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! COMENTARIO      [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! INCREMENTAR     [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! DECREMENTAR     [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! NEWLINE         [ reduce using rule 38 (instrucciones -> vacio .) ]
  ! $end            [ reduce using rule 38 (instrucciones -> vacio .) ]


state 5

    (6) definicion_funcion -> dominio . tipo_return NOMBRE PARIZQ parametro PARDER
    (9) tipo_return -> . VOID
    (10) tipo_return -> . FUNCTION

    VOID            shift and go to state 13
    FUNCTION        shift and go to state 14

    tipo_return                    shift and go to state 12

state 6

    (37) instrucciones -> indentacion . instruccion concat_instruccion
    (21) instruccion -> . condicion_if comentario NEWLINE
    (22) instruccion -> . condicion_else comentario NEWLINE
    (23) instruccion -> . ciclo_for comentario NEWLINE
    (24) instruccion -> . ciclo_while comentario NEWLINE
    (25) instruccion -> . imprimir comentario NEWLINE
    (26) instruccion -> . leer comentario NEWLINE
    (27) instruccion -> . incdec comentario NEWLINE
    (28) instruccion -> . dec_variable comentario NEWLINE
    (29) instruccion -> . dec_vector comentario NEWLINE
    (30) instruccion -> . asigna comentario NEWLINE
    (31) instruccion -> . asignacion_vector comentario NEWLINE
    (32) instruccion -> . llamado_funcion comentario NEWLINE
    (33) instruccion -> . retorno comentario NEWLINE
    (34) instruccion -> . comentario NEWLINE
    (41) condicion_if -> . IF PARIZQ condicion PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
    (42) condicion_else -> . ELSE LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
    (43) condicion_else -> . ELSE condicion_if
    (44) ciclo_for -> . FOR PARIZQ dec_variable PUNTOYCOMA condicion PUNTOYCOMA incdec PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
    (51) ciclo_while -> . WHILE PARIZQ condicion PARDER LLAVEIZQ
    (52) imprimir -> . PRINT PARIZQ tipo_variable PARDER
    (53) leer -> . READ PARIZQ NOMBRE PARDER
    (45) incdec -> . pre_incdec
    (46) incdec -> . post_incdec
    (54) dec_variable -> . DECVARIABLE ASIGNACION op_aritmetica
    (55) dec_variable -> . DECVARIABLE ASIGNACION tipo_variable
    (56) dec_vector -> . DECVARIABLE CORCHETEIZQ NOMBRE CORCHETEDER
    (57) dec_vector -> . DECVARIABLE CORCHETEIZQ INT CORCHETEDER
    (58) dec_vector -> . DECVARIABLE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION op_aritmetica
    (59) dec_vector -> . DECVARIABLE CORCHETEIZQ INT CORCHETEDER ASIGNACION op_aritmetica
    (60) dec_vector -> . DECVARIABLE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION tipo_variable
    (61) dec_vector -> . DECVARIABLE CORCHETEIZQ INT CORCHETEDER ASIGNACION tipo_variable
    (62) asigna -> . NOMBRE ASIGNACION op_aritmetica
    (63) asigna -> . NOMBRE ASIGNACION tipo_variable
    (64) asignacion_vector -> . NOMBRE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION op_aritmetica
    (65) asignacion_vector -> . NOMBRE CORCHETEIZQ INT CORCHETEDER ASIGNACION op_aritmetica
    (66) asignacion_vector -> . NOMBRE CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION tipo_variable
    (67) asignacion_vector -> . NOMBRE CORCHETEIZQ INT CORCHETEDER ASIGNACION tipo_variable
    (15) llamado_funcion -> . NOMBRE PARIZQ parametro_llamado PARDER
    (16) llamado_funcion -> . NOMBRE PARIZQ vacio PARDER
    (68) retorno -> . RETURN tipo_variable
    (69) retorno -> . RETURN op_aritmetica
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (47) pre_incdec -> . INCREMENTAR NOMBRE
    (48) pre_incdec -> . DECREMENTAR NOMBRE
    (49) post_incdec -> . NOMBRE INCREMENTAR
    (50) post_incdec -> . NOMBRE DECREMENTAR
    (99) vacio -> .

    IF              shift and go to state 30
    ELSE            shift and go to state 31
    FOR             shift and go to state 32
    WHILE           shift and go to state 33
    PRINT           shift and go to state 34
    READ            shift and go to state 35
    DECVARIABLE     shift and go to state 39
    NOMBRE          shift and go to state 36
    RETURN          shift and go to state 41
    COMENTARIO      shift and go to state 42
    INCREMENTAR     shift and go to state 43
    DECREMENTAR     shift and go to state 44
    NEWLINE         reduce using rule 99 (vacio -> .)

    instruccion                    shift and go to state 15
    condicion_if                   shift and go to state 16
    comentario                     shift and go to state 17
    condicion_else                 shift and go to state 18
    ciclo_for                      shift and go to state 19
    ciclo_while                    shift and go to state 20
    imprimir                       shift and go to state 21
    leer                           shift and go to state 22
    incdec                         shift and go to state 23
    dec_variable                   shift and go to state 24
    dec_vector                     shift and go to state 25
    asigna                         shift and go to state 26
    asignacion_vector              shift and go to state 27
    llamado_funcion                shift and go to state 28
    retorno                        shift and go to state 29
    pre_incdec                     shift and go to state 37
    post_incdec                    shift and go to state 38
    vacio                          shift and go to state 40

state 7

    (7) dominio -> PRIVATE .

    VOID            reduce using rule 7 (dominio -> PRIVATE .)
    FUNCTION        reduce using rule 7 (dominio -> PRIVATE .)


state 8

    (8) dominio -> PUBLIC .

    VOID            reduce using rule 8 (dominio -> PUBLIC .)
    FUNCTION        reduce using rule 8 (dominio -> PUBLIC .)


state 9

    (4) indentacion -> TABULACION . indentacion
    (4) indentacion -> . TABULACION indentacion
    (5) indentacion -> . vacio
    (99) vacio -> .

    TABULACION      shift and go to state 9
    IF              reduce using rule 99 (vacio -> .)
    ELSE            reduce using rule 99 (vacio -> .)
    FOR             reduce using rule 99 (vacio -> .)
    WHILE           reduce using rule 99 (vacio -> .)
    PRINT           reduce using rule 99 (vacio -> .)
    READ            reduce using rule 99 (vacio -> .)
    DECVARIABLE     reduce using rule 99 (vacio -> .)
    NOMBRE          reduce using rule 99 (vacio -> .)
    RETURN          reduce using rule 99 (vacio -> .)
    COMENTARIO      reduce using rule 99 (vacio -> .)
    INCREMENTAR     reduce using rule 99 (vacio -> .)
    DECREMENTAR     reduce using rule 99 (vacio -> .)
    NEWLINE         reduce using rule 99 (vacio -> .)
    LLAVEDER        reduce using rule 99 (vacio -> .)

    indentacion                    shift and go to state 45
    vacio                          shift and go to state 46

state 10

    (1) Niark -> definicion_funcion LLAVEIZQ . NEWLINE instrucciones LLAVEDER NEWLINE Niark

    NEWLINE         shift and go to state 47


state 11

    (2) Niark -> instrucciones Niark .

    $end            reduce using rule 2 (Niark -> instrucciones Niark .)


state 12

    (6) definicion_funcion -> dominio tipo_return . NOMBRE PARIZQ parametro PARDER

    NOMBRE          shift and go to state 48


state 13

    (9) tipo_return -> VOID .

    NOMBRE          reduce using rule 9 (tipo_return -> VOID .)


state 14

    (10) tipo_return -> FUNCTION .

    NOMBRE          reduce using rule 10 (tipo_return -> FUNCTION .)


state 15

    (37) instrucciones -> indentacion instruccion . concat_instruccion
    (39) concat_instruccion -> . indentacion instruccion concat_instruccion
    (40) concat_instruccion -> . vacio
    (4) indentacion -> . TABULACION indentacion
    (5) indentacion -> . vacio
    (99) vacio -> .

  ! shift/reduce conflict for TABULACION resolved as shift
    TABULACION      shift and go to state 9
    PRIVATE         reduce using rule 99 (vacio -> .)
    PUBLIC          reduce using rule 99 (vacio -> .)
    IF              reduce using rule 99 (vacio -> .)
    ELSE            reduce using rule 99 (vacio -> .)
    FOR             reduce using rule 99 (vacio -> .)
    WHILE           reduce using rule 99 (vacio -> .)
    PRINT           reduce using rule 99 (vacio -> .)
    READ            reduce using rule 99 (vacio -> .)
    DECVARIABLE     reduce using rule 99 (vacio -> .)
    NOMBRE          reduce using rule 99 (vacio -> .)
    RETURN          reduce using rule 99 (vacio -> .)
    COMENTARIO      reduce using rule 99 (vacio -> .)
    INCREMENTAR     reduce using rule 99 (vacio -> .)
    DECREMENTAR     reduce using rule 99 (vacio -> .)
    NEWLINE         reduce using rule 99 (vacio -> .)
    $end            reduce using rule 99 (vacio -> .)
    LLAVEDER        reduce using rule 99 (vacio -> .)

  ! TABULACION      [ reduce using rule 99 (vacio -> .) ]

    indentacion                    shift and go to state 49
    concat_instruccion             shift and go to state 50
    vacio                          shift and go to state 51

state 16

    (21) instruccion -> condicion_if . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 52
    vacio                          shift and go to state 40

state 17

    (34) instruccion -> comentario . NEWLINE

    NEWLINE         shift and go to state 53


state 18

    (22) instruccion -> condicion_else . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 54
    vacio                          shift and go to state 40

state 19

    (23) instruccion -> ciclo_for . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 55
    vacio                          shift and go to state 40

state 20

    (24) instruccion -> ciclo_while . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 56
    vacio                          shift and go to state 40

state 21

    (25) instruccion -> imprimir . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 57
    vacio                          shift and go to state 40

state 22

    (26) instruccion -> leer . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 58
    vacio                          shift and go to state 40

state 23

    (27) instruccion -> incdec . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 59
    vacio                          shift and go to state 40

state 24

    (28) instruccion -> dec_variable . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 60
    vacio                          shift and go to state 40

state 25

    (29) instruccion -> dec_vector . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 61
    vacio                          shift and go to state 40

state 26

    (30) instruccion -> asigna . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 62
    vacio                          shift and go to state 40

state 27

    (31) instruccion -> asignacion_vector . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 63
    vacio                          shift and go to state 40

state 28

    (32) instruccion -> llamado_funcion . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 64
    vacio                          shift and go to state 40

state 29

    (33) instruccion -> retorno . comentario NEWLINE
    (35) comentario -> . COMENTARIO
    (36) comentario -> . vacio
    (99) vacio -> .

    COMENTARIO      shift and go to state 42
    NEWLINE         reduce using rule 99 (vacio -> .)

    comentario                     shift and go to state 65
    vacio                          shift and go to state 40

state 30

    (41) condicion_if -> IF . PARIZQ condicion PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER

    PARIZQ          shift and go to state 66


state 31

    (42) condicion_else -> ELSE . LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER
    (43) condicion_else -> ELSE . condicion_if
    (41) condicion_if -> . IF PARIZQ condicion PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER

    LLAVEIZQ        shift and go to state 67
    IF              shift and go to state 30

    condicion_if                   shift and go to state 68

state 32

    (44) ciclo_for -> FOR . PARIZQ dec_variable PUNTOYCOMA condicion PUNTOYCOMA incdec PARDER LLAVEIZQ NEWLINE instrucciones indentacion LLAVEDER

    PARIZQ          shift and go to state 69


state 33

    (51) ciclo_while -> WHILE . PARIZQ condicion PARDER LLAVEIZQ

    PARIZQ          shift and go to state 70


state 34

    (52) imprimir -> PRINT . PARIZQ tipo_variable PARDER

    PARIZQ          shift and go to state 71


state 35

    (53) leer -> READ . PARIZQ NOMBRE PARDER

    PARIZQ          shift and go to state 72


state 36

    (62) asigna -> NOMBRE . ASIGNACION op_aritmetica
    (63) asigna -> NOMBRE . ASIGNACION tipo_variable
    (64) asignacion_vector -> NOMBRE . CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION op_aritmetica
    (65) asignacion_vector -> NOMBRE . CORCHETEIZQ INT CORCHETEDER ASIGNACION op_aritmetica
    (66) asignacion_vector -> NOMBRE . CORCHETEIZQ NOMBRE CORCHETEDER ASIGNACION tipo_variable
    (67) asignacion_vector -> NOMBRE . CORCHETEIZQ INT CORCHETEDER ASIGNACION tipo_variable
    (15) llamado_funcion -> NOMBRE . PARIZQ parametro_llamado PARDER
    (16) llamado_funcion -> NOMBRE . PARIZQ vacio PARDER
    (49) post_incdec -> NOMBRE . INCREMENTAR
    (50) post_incdec -> NOMBRE . DECREMENTAR
